# TimeSyncLibrary

./: CMakeLists.txt  README.md  main.cpp
src/: socketutil.cpp  socketutil.h
